--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -17,6 +17,7 @@
         />
 
     <TextView
+        android:id="@+id/title"
         android:layout_marginTop="250dp"
         android:layout_width="match_parent"
         android:textColor="@color/colorGeekTech"
@@ -25,27 +26,8 @@
         android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"/>
 
-
     <TextView
-        android:layout_marginTop="270dp"
-        android:layout_width="match_parent"
-        android:textColor="@color/colorGeekTech"
-        android:text="Архитектура"
-        android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content"/>
-
-
-    <TextView
-        android:layout_marginTop="300dp"
-        android:layout_width="match_parent"
-        android:textStyle="bold"
-        android:textColor="@color/colorGeekTech"
-        android:text="Описание урока"
-        android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content"/>
-
-
-    <TextView
+        android:id="@+id/desc"
         android:layout_marginTop="350dp"
         android:layout_width="match_parent"
         android:textStyle="bold"
