--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -103,6 +103,7 @@
         android:orientation="vertical"
         android:paddingStart="15dp">
 
+        Бакыт khamraev, [30.08.20 15:39]
         <TextView
             android:id="@+id/student_group"
             android:layout_width="wrap_content"
@@ -217,6 +218,7 @@
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textStyle="bold" />
+
 
         <Button
             android:id="@+id/close"
