--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,8 +16,8 @@
         android:paddingEnd="10dp">
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_baseline_star_24" />
 
@@ -25,8 +25,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_margin="8dp"
             android:text="10"
-            android:textSize="25sp" />
+            android:textColor="@color/colorGeekTech"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -35,7 +38,6 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
         app:cardCornerRadius="500dp">
 
         <ImageView
@@ -53,7 +55,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:text="@string/account"
-        android:textColor="#1779EA"
+        android:textColor="@color/colorGeekTech"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -72,27 +74,25 @@
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:text="@string/a"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorGeekTech"
             android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_view_profile_image" />
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:text="@string/click_to_change_name" />
+            android:text="@string/click_to_change_name"
+            android:textColor="@color/colorGeekTech" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginStart="15dp"
+        android:layout_height="20dp"
         android:layout_marginTop="10dp"
-        android:background="#330411" />
+        android:background="@drawable/hint" />
+
 
     <LinearLayout
         android:id="@+id/linear_layout_edit_student_group"
@@ -103,13 +103,14 @@
         android:orientation="vertical"
         android:paddingStart="15dp">
 
+
         <TextView
             android:id="@+id/student_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:text="21"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorGeekTech"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -120,23 +121,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:text="@string/group" />
+            android:text="@string/group"
+            android:textColor="@color/colorGeekTech" />
 
     </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/hint" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:text="@string/info"
-        android:textColor="#1779EA"
-        android:textStyle="bold" />
 
 
     <LinearLayout
@@ -153,8 +148,8 @@
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:text="@string/lack_of_concentration"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textColor="@color/colorGeekTech"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -164,7 +159,79 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:text="@string/group" />
+            android:text="Информация о ученике"
+            android:textColor="@color/colorGeekTech" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/lesson"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:text="Cправочник"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+
+        <Button
+            android:id="@+id/mentor"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/button"
+            android:padding="15dp"
+            android:layout_marginLeft="15dp"
+            android:text="Нужен ментор"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:padding="15dp"
+            android:text="Офис открыт"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button"
+            android:padding="15dp"
+            android:text="Офис закрыт"
+            android:layout_marginLeft="15dp"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
 
     </LinearLayout>
 
