--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -49,12 +49,12 @@
     <fragment
         android:id="@+id/navigation_chat"
         android:name="com.geektech.geektech.ui.admin.chat.ChatFragment"
-        android:label="fragment_chat"
+        android:label="Группы"
         tools:layout="@layout/fragment_chat" />
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.geektech.geektech.ui.admin.profile.ProfileFragment"
-        android:label="fragment_profile"
+        android:label="Профиль"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/formGroupFragment"
@@ -71,7 +71,7 @@
     <fragment
         android:id="@+id/navigation_network"
         android:name="com.geektech.geektech.ui.network.NetworkFragment"
-        android:label="fragment_network"
+        android:label="Статьи"
         tools:layout="@layout/fragment_network" />
     <fragment
         android:id="@+id/settingsFragment"
@@ -100,7 +100,7 @@
     <fragment
         android:id="@+id/groupInfoFragment"
         android:name="com.geektech.geektech.ui.admin.chat.group_info.GroupInfoFragment"
-        android:label="fragment_group_info"
+        android:label="Информация о группе"
         tools:layout="@layout/fragment_group_info" />
     <fragment
         android:id="@+id/formLessonFragment"
