--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="60dp"
     android:paddingEnd="10dp"
-    android:layout_marginBottom="15dp">
+    android:layout_marginBottom="15dp"
+    tools:ignore="RtlSymmetry">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
